--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PokeDex</title>
     <script type="module" src="./path/app.js"></script>
     <link rel="stylesheet" href="./styles/utils.css">
     <link rel="stylesheet" href="./styles/body.css">
@@ -42,5 +42,16 @@
         </ul>
     </div>
 
+    <!-- Footer starts -->
+    <div class="footer m-auto">
+      <label for="">Feedback</label>
+      <input type="text" class="" placeholder="First Name" />
+      <input type="text" placeholder="e-mail" />
+      <button type="submit" class="btn btn-foot">Send Feedback</button>
+    </div>
+    <div class="m-auto copyright">
+      <p>copyright 2022 @md_arif</p>
+    </div>
+    <!-- Footer ends -->
 </body>
 </html>
