--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
             
         </ul>
     </div>
-
+    <!-- Pagination -->
+    <div class="pagination m-auto">
+      <ul class="change" >
+        <button id="button_prev" >Previous</button>
+        <span id="page_number"></span>
+        <button id="button_next">Next</button>
+      </ul>
+    </div>
     <!-- Footer starts -->
     <div class="footer m-auto">
       <label for="">Feedback</label>
