--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </ul>
         </div>
         <div class="right">
-          <input type="text" placeholder="Article Search" />
+          <input type="text" id="data-search" placeholder="Article Search" />
           <button class="btn"><i class="fa fa-magnifying-glass"></i></button>
         </div>
       </nav>
