color and search pattern changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
         <div class="right">
-          <input type="text" id="data-search" placeholder="Article Search" />
+          <input type="text" id="data-search" placeholder="Search by name or type" />
           <button class="btn"><i class="fa fa-magnifying-glass"></i></button>
         </div>
       <!-- </div> -->
